--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
-Flask
-Flask-Cors
-google-auth
-google-auth-oauthlib
-requests
-python-docx
-PyPDF2
-gunicorn
+blinker==1.9.0
+cachetools==6.2.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.1.8
+Flask==3.1.2
+flask-cors==6.0.1
+google-auth==2.41.1
+google-auth-oauthlib==1.2.3
+idna==3.11
+importlib_metadata==8.7.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+lxml==6.0.2
+MarkupSafe==3.0.3
+oauthlib==3.3.1
+psycopg2-binary==2.9.11
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+PyPDF2==3.0.1
+python-docx==1.2.0
+requests==2.32.5
+requests-oauthlib==2.0.0
+rsa==4.9.1
+typing_extensions==4.15.0
+urllib3==2.6.1
+Werkzeug==3.1.3
+zipp==3.23.0
