--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,9 @@ python-dateutil==2.9.0.post0
 python-docx==1.2.0
 requests==2.32.5
 requests-oauthlib==2.0.0
+reportlab>=4.0.0
 rsa==4.9.1
+scikit-learn==1.6.1
 s3transfer==0.16.0
 six==1.17.0
 typing_extensions==4.15.0
