--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ python-docx==1.2.0
 requests==2.32.5
 requests-oauthlib==2.0.0
 reportlab>=4.0.0
+rapidocr_onnxruntime==1.2.3
 rsa==4.9.1
 scikit-learn==1.6.1
 s3transfer==0.16.0
