--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ jmespath==1.1.0
 lxml==6.0.2
 MarkupSafe==3.0.3
 oauthlib==3.3.1
+opencv-python-headless==4.13.0.92
 packaging==26.0
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
